# erp-bill

./: .replit  db.sqlite3  main.py  pyproject.toml  replit.md
billing/: settings.py  urls.py
inventory/: admin.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_product_stock_quantity_and_more.py  0003_collection_alter_product_sku_product_collection.py
profiles/: admin.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_shopprofile_last_invoice_number.py
reports/: urls.py  views.py
sales/: admin.py  models.py  urls.py  views.py
sales/migrations/: 0001_initial.py
templates/: base.html
templates/inventory/: barcode_labels.html  barcode_sheet.html  dashboard.html  generate_barcode.html  login.html  product_delete.html  product_form.html  product_list.html  stock_adjustment.html  stock_movements.html  stock_purchase.html
templates/profiles/: profile_detail.html  profile_edit.html  set_password.html
templates/reports/: dashboard.html  monthly_summary.html  sales_report.html  stock_report.html
templates/sales/: customer_form.html  customer_list.html  invoice_detail.html  invoice_list.html  invoice_print_a4.html  invoice_print_a5.html  invoice_print_thermal.html  pos_index.html
