[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.6",
    "django-crispy-forms>=2.4",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "python-barcode>=0.16.1",
]
